Split name to first, surname
