# services/semmelei/src/http/handler_frontend/orders/handler.rs
@@ -59,7 +59,8 @@ async fn full_order(
         status: order.status,
         pickup_date: SchemaDate(pickup_day.pickup_date),
         locked: pickup_day.is_locked(now),
-        customer_name: order.customer_name.to_string(),
+        first_name: order.first_name.map(|n| n.to_string()),
+        last_name: order.last_name.to_string(),
         phone: order.phone.map(|p| p.to_string()),
         email: order.email.map(|e| e.to_string()),
         note: order.note.map(|n| n.to_string()),
